--- a/Beautifill/Beautifill/Content/Site.css
+++ b/Beautifill/Beautifill/Content/Site.css
@@ -22,3 +22,50 @@ select,
 textarea {
     max-width: 280px;
 }
+html, body {
+    height: 100%;
+}
+
+body > .jumbotron {
+display: block;
+position: relative;
+top:40px; 
+   
+}
+
+body > .container {
+display: block;
+height: 100%;
+/*position: relative;
+top:40px; */
+   
+}
+
+body > div > .row {
+    display:block;
+    height: 100%;
+}
+.col-md-12:nth-child(1){
+    display: block;
+    /*height: 100%;*/
+    background: red;
+}
+.col-md-12:nth-child(2){
+        display: block;
+
+    /*height: 100%;*/
+    background: green;
+}
+.col-md-12:nth-child(3){
+        display: block;
+
+    /*height: 100%;*/
+    background: blue;
+}
+
+/*Scrollorama*/
+.scrollblock {
+margin: 0;
+width: 100%;
+height: 600px;
+}
