--- a/Beautifill/Beautifill/Views/Home/Index.cshtml
+++ b/Beautifill/Beautifill/Views/Home/Index.cshtml
@@ -31,64 +31,67 @@
 </div>*@
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Beautifier</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">Section1</a></li>
-                <li><a href="#contact">Section2</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Section3 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <!--<li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>-->
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
+
 
 
 <!--//Jumbotron-->
-<div class="jumbotron">
+@*<div class="jumbotron">
     <div class="container">
         <h1>Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
     </div>
-</div>
+</div>*@
 
 
 <div class="container">
 
-    <h1>Hello, world!</h1>
+    @*<h1>Hello, world!</h1>
 
-    <div class="row">
-        <div class="col-md-12 scrollblock"><h1 id="title1">Block 1</h1></div>
-        <div class="col-md-12 scrollblock"><h1 id="title2">Block 1</h1></div>
-        <div class="col-md-12 scrollblock"><h1 id="title3">Block 1</h1></div>
-    </div>
+        <div class="row">
+            <div class="col-md-12 scrollblock"><div id="trigger1"> </div><div id="animate1"><h1 id="title1">Block 1</h1></div></div>
+            <div class="col-md-12 scrollblock"><div id="trigger2"> </div><div id="animate2"><h1 id="title2">Block 2</h1></div></div>
+            <div class="col-md-12 scrollblock"><div id="trigger3"> </div><div id="animate3"><h1 id="title3">Block 3</h1></div></div>
+        </div>*@
+    <div id="content-wrapper">
+        <div id="example-wrapper">
+
+            <div class="scrollContent">
+                <section id="titlechart" style="height: 955px;">
+                    <div id="description">
+                        <h1 class="badge gsap" title="This example requires the the Greensock Animation Platform.">Anchor Link Scrolling</h1>
+                        <h2>Mastering in-page navigation.</h2>
+                        <p>If you have a long page and you want to use anchor links to allow your users to navigate it you might want to scroll to the respective position, instead of jumping to it. After all you put a lot of effort in to all those animations and you want the user to see them...</p>
+                        <p>The best way to achieve this is to use the TweenMax ScrollToPlugin and change the behaviour of all anchor links. (remember to load the necessary plugin file)</p>
+                        <a href="#" class="viewsource">view source</a>
+                    </div>
+                </section>
+                <section class="demo">
+                    <form class="move">
+                        <fieldset>
+                            <legend>Anchor Links</legend>
+                            <p><a href="#top">Top</a></p>
+                            <p><a href="#middle">Middle</a></p>
+                            <p><a href="#bottom">Bottom</a></p>
+                        </fieldset>
+                    </form>
+                    <a id="top"></a>
+                    <div class="spacer s1"></div>
+                    <a id="middle"></a>
+                    <div class="spacer s1"></div>
+                    <a id="bottom"></a>
+                    <div class="spacer s0"></div>
+                    <div id="animate" class="box1 blue">
+                        <p>Peek-a-boo!</p>
+                        <a href="#" class="viewsource">view source</a>
+                    </div>
+                    <div class="spacer s2"></div>
+
+                </section>
+                <div class="spacer s_viewport"></div>
+            </div>
 
 
+        </div>
+        </div>
 </div>
