--- a/Beautifill/Beautifill/Views/Shared/_Layout.cshtml
+++ b/Beautifill/Beautifill/Views/Shared/_Layout.cshtml
@@ -40,9 +40,15 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script type="text/javascript" src="~/Content/TweenMax.min.js"></script>
+    @*<script type="text/javascript" src="~/Content/TweenMax.min.js"></script>
     <script>window.jQuery || document.write('<script src="_/~/Content/jquery-1.9.1.min.js"><\/script>')</script>
-    <script src="~/Content/jquery.superscrollorama.js"></script>
+    <script src="~/Content/jquery.superscrollorama.js"></script>*@
+    @*Scrollmagic2*@
+    <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/plugins/ScrollToPlugin.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="~/Content/animation.gsap.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="~/Content/scripts.js"></script>
 </body>
 </html>
