--- a/Beautifill/Beautifill/Content/Site.css
+++ b/Beautifill/Beautifill/Content/Site.css
@@ -63,7 +63,7 @@ body > div > .row {
     background-color: blue;
 }
 
-/*Scrollorama*/
+/*Scrollorama 2*/
 .scrollblock {
 margin: 0;
 width: 100%;
