--- a/Beautifill/Beautifill/Views/Home/Index.cshtml
+++ b/Beautifill/Beautifill/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
     <h1>Hello, world!</h1>
 
     <div class="row">
-        <div class="col-md-12 scrollblock"><h1 id="title1">Block 1</h1></div>
+        <div class="col-md-12 scrollblock"><h1 class="scrollblock" id="title1">Block 1</h1></div>
         <div class="col-md-12 scrollblock"><h1 id="title2">Block 1</h1></div>
         <div class="col-md-12 scrollblock"><h1 id="title3">Block 1</h1></div>
     </div>
