--- a/Beautifill/Beautifill/Views/Shared/_Layout.cshtml
+++ b/Beautifill/Beautifill/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="http://scrollmagic.io/css/style.css" type="text/css">
+    <link rel="stylesheet" href="http://scrollmagic.io/css/examples.css" type="text/css">
 
 </head>
 <body>
@@ -43,6 +45,11 @@
     <script type="text/javascript" src="~/Content/TweenMax.min.js"></script>
     <script>window.jQuery || document.write('<script src="_/~/Content/jquery-1.9.1.min.js"><\/script>')</script>
     <script src="~/Content/jquery.superscrollorama.js"></script>
+
+    @*NEW VERSION*@
+    @*<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>*@
+
     <script src="~/Content/scripts.js"></script>
 </body>
 </html>
