--- a/Beautifill/Beautifill/Content/Site.css
+++ b/Beautifill/Beautifill/Content/Site.css
@@ -69,25 +69,25 @@ margin: 0;
 width: 100%;
 height: 600px;
 }
-.container, #content-wrapper, #example-wrapper {
+.container, #content-wrapper, #example-wrapper,.scrollContent, #titlechart {
     height: 100%;
 }
-#example-wrapper .scrollContent {
+/*#example-wrapper .scrollContent {
     height: 100%;
-}
+}*/
 .demo#section-slides, .demo#section-wipes {
     height: 100%;
     width: 100%;
     background-image: none;
 }
-section#titlechart {
+/*section#titlechart {
     text-align: center;
     position: relative;
     height: 100%;
     min-height: 500px;
     min-width: 100%;
     height: 569px;
-}
+}*/
 
 .blue {
     background-color:blue;
