--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	General styles
 */
 body {
-	font-family: "Source Sans Pro", Arial, sans-serif;
+	font-family: "Source Sans Pro", Arial, sans-serif !important;
 	background-color: #c7e1ff;
 	font-size: 13px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -187,4 +187,12 @@ body > div > .row {
 margin: 0;
 width: 100%;
 height: 955px;
+}
+
+@media (min-width: 768px) {
+.navbar-nav {
+    float: right !important;
+}
+
+
 }
