--- a/css/demo.css
+++ b/css/demo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #3757D0;
+    /*background-color: #3757D0;
     background-image: -webkit-radial-gradient(#81BCFF, #303391);
     background-image: radial-gradient(#81BCFF, #303391);
     background-size: 100%;
@@ -7,7 +7,7 @@ body {
     background-attachment: fixed;
     font-size: 25px;
     line-height: 31px;
-    color: rgb(73, 72, 100);
+    color: rgb(73, 72, 100);*/
 }
 ::selection {
     background: #ff455f;
@@ -55,12 +55,12 @@ iframe.twitter-follow-button {
     margin: auto auto -1px 8px;
 }
 div#content-wrapper {
-    height: 100%;
+    /*height: 100%;
     min-width: 900px;
-    min-height: 500px;
+    min-height: 500px;*/
 }
 html.touch div#content-wrapper {
-    min-width: 700px;
+    /*min-width: 700px;*/
 }
 .scrollContainer {
     overflow-y: scroll;
